# MemU-with-SillyTavern-2

./: .gitignore  README-zh.md  README.md
memU-main/memU-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.self_host.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  setup.cfg
memU-main/memU-main/.github/workflows/: publish.yml
memU-main/memU-main/compose/: COMPOSE_CONFIGURATIONS.md  DOCKER_BUILD_OPTIONS.md  README.md  docker-compose.gpu.yml  docker-compose.local-cpu.yml  docker-compose.minimal.yml  docker-compose.server-cpu.yml  docker-compose.yml
memU-main/memU-main/docs/: API_REFERENCE.md
memU-main/memU-main/example/client/: conversation.json  memory.js  memory.py
memU-main/memU-main/example/server/: test_server.py
memU-main/memU-main/memu/: __init__.py
memU-main/memU-main/memu/config/: README.md  __init__.py  markdown_config.py  memory_cat_config.yaml
memU-main/memU-main/memu/config/activity/: config.py  prompt.txt
memU-main/memU-main/memu/config/event/: config.py  prompt.txt
memU-main/memU-main/memu/config/profile/: config.py  prompt.txt
memU-main/memU-main/memu/llm/: __init__.py  azure_openai_client.py  base.py  custom_client.py  deepseek_client.py  openai_client.py  openrouter_client.py
memU-main/memU-main/memu/memory/: __init__.py  embeddings.py  file_manager.py  memory_agent.py  recall_agent.py
memU-main/memU-main/memu/memory/actions/: __init__.py  add_activity_memory.py  base_action.py  cluster_memories.py  generate_suggestions.py  get_available_categories.py  link_related_memories.py  run_theory_of_mind.py  update_memory_with_suggestions.py
memU-main/memU-main/memu/sdk/javascript/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
memU-main/memU-main/memu/sdk/javascript/examples/: basic-usage.js  typescript-usage.ts
memU-main/memU-main/memu/sdk/javascript/src/: client.ts  exceptions.ts  index.ts  models.ts
memU-main/memU-main/memu/sdk/python/: __init__.py  client.py  exceptions.py  models.py
memU-main/memU-main/memu/server/: README.md  __init__.py  cli.py  main.py  middleware.py  models.py  requirements.txt
memU-main/memU-main/memu/server/routers/: __init__.py  memory.py
memU-main/memU-main/memu/server/services/: __init__.py  memory_service.py  task_service.py
memU-main/memU-main/memu/utils/: __init__.py  logging.py
memU-main/memU-main/scripts/evals/locomo/: result.json
memU-main/memU-main/scripts/evals/locomo/PROMPT/: eval
memu-sillytavern-extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.mjs
memu-sillytavern-extension/src/: App.tsx  global.d.ts  index.tsx
memu-sillytavern-extension/src/memory/: exports.ts  memorize.ts  summary-poller.ts  utils.ts
memu-sillytavern-extension/src/ui/: status.tsx
memu-sillytavern-extension/src/utils/: consts.ts  context-extra.ts  network.ts  types.ts  utils.ts
memu-sillytavern-plugin/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
memu-sillytavern-plugin/src/: consts.ts  index.ts  memu-endpoint.ts
