[build-system]
requires = ["setuptools>=61.0,<70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memu-py"
version = "0.1.11"
authors = [
    {name = "MemU Team", email = "contact@nevamind.ai"},
]
description = "AI Memory and Conversation Management Framework - Simple as mem0, Powerful as MemU"
readme = "README.md"
# license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "memory", "conversation", "llm", "chatbot", "agent"]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=0.19.0", 
    "azure-ai-inference>=1.0.0b9",
    "json5>=0.9.0",
    "PyYAML>=6.0.0",
    "openai>=1.60.0",
    "anthropic>=0.54.0",
    "httpx>=0.23,<0.28",
    "pydantic>=2.7.5",
    "pydantic-settings>=2.0.0",
    "starlette>=0.40.0",
    "fastapi>=0.115.2",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "twine>=4.0",
    "build>=0.10",
]
ai = [
    "openai>=1.60.0",
    "sentence-transformers>=2.2.0",
]
llm = [
    "openai>=1.60.0",
    "anthropic>=0.54.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    "boto3>=1.26.0",
    "together>=0.2.0",
    "replicate>=0.15.0",
]
local = [
    "transformers>=4.21.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
]
database = [
    "psycopg2-binary>=2.9.9",
]
server = [
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
]
server-cpu = [
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Use CPU-only embeddings alternative or skip heavy dependencies
]
minimal = [
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Minimal server setup without embeddings
]
all = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    "boto3>=1.26.0",
    "together>=0.2.0",
    "replicate>=0.15.0",
    "transformers>=4.21.0",
    "torch>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.urls]
"Homepage" = "https://github.com/NevaMind-AI/MemU"
"Bug Tracker" = "https://github.com/NevaMind-AI/MemU/issues"
"Documentation" = "https://github.com/NevaMind-AI/MemU#readme"

[project.scripts]
memu-server = "memu.server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memu*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
"memu.config" = [
    "memory_cat_config.yaml",
    "activity/prompt.txt",
    "event/prompt.txt",
    "profile/prompt.txt",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=memu --cov-report=term-missing --cov-report=html"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true 